--- a/install/versions/1.md
+++ b/install/versions/1.md
@@ -784,7 +784,7 @@ Addressed some minor issues and requests from the first beta, 11th November 2010
 
 ## Version 1.3 beta 1
 
-First beta of major feature update, 4th November 2010, **now [licensed under GPL](license.php)**.
+First beta of major feature update, 4th November 2010, **now [licensed under GPL](https://www.question2answer.org/license.php)**.
 
 ### New Features
 
