Refactored Github Repository dates, finished 2020 design
- Refactored the repository dates function.
Dates are now stored on user devices via localStorage, and are only fetched again if there's a change on the lists size (one more list item added, one less list item removed) , or 90 days / 3 months have passed since last fetched. the amount of days for the next fetch can be changed at the top of the scripts.js file.
- Current visited page now is highlighted.
- Added Breadcrumbs
- Added sidebar navigation for sections of the articles.
- Created a popup for the "Welcome to Docs" text.
- Added scroll to top button.
- Internal links fixes.
- Added Mega Menu for Documentation, to group things into sections.

--- a/install/versions/1.md
+++ b/install/versions/1.md
@@ -2,6 +2,7 @@
 layout: page
 menu: install
 title: "Question2Answer - 1.x version history"
+slug: install-version-history-1
 ---
 
 # Version History (1.6.x and earlier)
